<resources>
    <string name="app_name">ARM GUIDE</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_add_new_tour">Add new tour</string>
    <string name="deafault_name">Name</string>
    <string name="default_Email">Email</string>
    <string name="action_sign_out">Sign out</string>
    <string name="sign_out_dialog_message">Are you sure you want to sign out ?</string>
    <string name="delete_dialog_message">Are you sure you want to delete ?</string>
    <string name="company_delete_tour">COMPANY HAS DELETED THIS TOUR</string>
    <string name="action_sign_in">Sign in</string>


    <string name="ripple_efect_atribut">android:background="?android:attr/selectableItemBackground"</string>


    <string name="google_maps_API_key">AIzaSyBQowSumhHgacPo_LedaEI9OyO1wcPRoDU</string>


    <string name="menu_home">Home</string>
    <string name="menu_notifications">Suggestion</string>
    <string name="menu_tour_companies">Tour companies</string>
    <string name="menu_all_tours">All tours</string>
    <string name="menu_my_tours">My tours</string>
    <string name="menu_map_armenia">Map of Armenia</string>
    <string name="menu_map_my_location">My location</string>


    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="dialog_1">Dialog 1</string>
    <string name="dialog_2">Dialog 2</string>
    <string name="message_text">Text of your message</string>
    <string name="next">Next</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    //for home places
    <string name="landscapeIntro">Rich in breathtaking natural, historical, and cultural landscapes, Armenia
        offers countless fascinating attractions to the curious and adventurous traveler. With many mountains,
        rivers, and lush forests to enjoy along with remote regions, forts, and monasteries to discover,the country will never cease
        to impress. We explore the 12 most beautiful places to visit.</string>
    <string name="location">Go to location clicking\n on the map </string>
    <string name="notif_info">"See your notification content here. You can remove or send the offer to your special Menu option\n 'MyTours'."</string>
    <string name="introFilterText">This section allows You to customize Your specific tours\n with some criteria introduced below.</string>
    //
    <string name="addtomytours">Add to \nMy Tours</string>
</resources>
