<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_tour_company"
            android:title="@string/menu_tour_companies" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_all_tours"
            android:title="@string/menu_all_tours" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_my_choosen_tours"
            android:title="@string/menu_my_tours" />
    </group>

    <item android:title="Maps">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_map_place_picker"
                android:title="@string/menu_map_armenia"
                android:checkable="true"/>
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_location"
                android:title="@string/menu_map_my_location"
                android:checkable="true"/>
        </menu>
    </item>

</menu>
